# tia_mcp_server

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  server.py  zz_useful_cli.txt
lib/tia-openness-api-client/tia_portal/: __init__.py  config.py
tools/: devices.py  dice_roll.py  project.py  software.py
utils/: dice_roll.py  tia_functions.py
