[project]
name = "tia-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]>=1.14.1",
    "tia-openness-api-client",
]

[tool.uv.sources]
tia-openness-api-client = { path = "../tia-openness-api-client" }
